fix for table row editor checkbox alignment

--- a/Stylesheets/src/Neptune/Components/Partials/_table-row-editor.scss
+++ b/Stylesheets/src/Neptune/Components/Partials/_table-row-editor.scss
@@ -60,11 +60,11 @@
 			vertical-align: top;
 			width: 200px;
 			margin: 0 0 5px;
-			padding-right: 30px;
 
 			label {
 				display: inline-block;
 				vertical-align: top;
+				width: 170px;
 			}
 		}
 
